<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="16dp"
              android:baselineAligned="false">

    <TextView
            android:id="@+id/total_calories_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_calories"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

    <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:baselineAligned="false">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/food_name_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <EditText
                    android:id="@+id/food_name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/food_name_hint"
                    android:inputType="text"
                    android:autofillHints="foodName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/food_calories_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <EditText
                    android:id="@+id/food_calories_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/food_calories_hint"
                    android:inputType="numberDecimal"
                    android:autofillHints="foodCalories" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/food_weight_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <EditText
                    android:id="@+id/food_weight_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/food_weight_hint"
                    android:inputType="numberDecimal"
                    android:autofillHints="foodWeight" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            style="?android:attr/buttonBarStyle">

        <Button
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_button_text"
                style="?android:attr/buttonBarButtonStyle" />

        <Button
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear_button_text"
                style="?android:attr/buttonBarButtonStyle" />

        <Button
                android:id="@+id/calculate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calculate_button_text"
                style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</LinearLayout>